# Open-Personas-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LAUNCH_CHECKLIST.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  publish.yml
deploy/: .env.production.example  FLY_DEPLOY.md  bootstrap.sh  docker-compose.production.yml
scripts/: t22b_documents_smoke.py
tools/routing_eval/: __init__.py  aggregate.py  replay.py
tools/routing_eval/fixtures/: representative_turns.yaml
