[project]
name = "persona-workspace"
version = "0.1.0"
description = "Persona monorepo workspace"
requires-python = ">=3.11"
# Root depends on every workspace member so a plain `uv sync` installs the
# whole monorepo into one virtualenv. Without this, members' deps only land
# when `uv sync --all-packages` is run — easy to forget, blocks mypy/pytest.
dependencies = [
    "persona-core[postgres]",
    "persona-runtime",
    "persona-api",
]

[tool.uv.workspace]
members = ["packages/core", "packages/runtime", "packages/api"]

[tool.uv.sources]
persona-core = { workspace = true }
persona-runtime = { workspace = true }
persona-api = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<7",
    "pre-commit>=3.7,<5",
    "types-PyYAML>=6,<7",
    # Spec 14 parser libraries — needed for Phase 5 test runs even though
    # D-14-X-documents-extra is "deferred v0.2" (the lazy-import +
    # MissingDependencyError discipline is the structural defence at the
    # import-graph level; these are direct test-environment deps so
    # pytest can exercise the actual parsers, not just simulated-missing
    # paths).
    "pypdf>=6.0,<7",
    "pypdfium2>=5.0,<6",
    "python-docx>=1.1,<2",
    "openpyxl>=3.1,<4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "COM", "C4", "PT", "RET", "SIM", "TCH", "ARG", "PTH", "ERA"]
ignore = ["COM812"]

[tool.ruff.lint.per-file-ignores]
# FastAPI (persona-api, spec 08): `Depends()`/`Query()` in argument defaults is
# the framework idiom (B008); and FastAPI resolves dependency/route signatures
# via get_type_hints at runtime, so names used in those annotations must be real
# runtime imports — the type-checking rules' "move into TYPE_CHECKING" would
# break dependency resolution (the request param gets mis-read as a query param).
"packages/api/**" = ["B008", "TC001", "TC002", "TC003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
# Workspace siblings (persona-core, persona-runtime, persona-api) are uv-editable
# installs; mypy needs the src paths explicitly to resolve `persona.*`,
# `persona_runtime.*`, and `persona_api.*` imports across workspace boundaries.
# Setting this here means every `uv run mypy <pkg>` invocation picks it up
# without per-call MYPYPATH gymnastics (closes LF-12-3).
mypy_path = "packages/core/src:packages/runtime/src:packages/api/src"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# pgvector ships no py.typed marker / stubs (spec 07 [postgres] extra). Ignore
# its missing imports rather than vendoring stubs for a third-party lib.
[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true

# python-jose (persona-api, spec 08 auth) ships no stubs. Ignore missing imports
# rather than depend on the partial third-party types-python-jose stubs.
[[tool.mypy.overrides]]
module = ["jose.*"]
ignore_missing_imports = true

# e2b-code-interpreter SDK (persona-api, spec 12 T08 hosted substrate per
# D-12-12) ships no py.typed marker. The hosted backend lazy-imports the SDK at
# the call site to keep the module importable without the SDK installed
# (graceful SandboxUnavailableError vs. ImportError at module load); the
# TYPE_CHECKING import pulls the ``Sandbox`` symbol for type-narrowing only.
[[tool.mypy.overrides]]
module = ["e2b_code_interpreter.*"]
ignore_missing_imports = true

# openpyxl (persona-core [documents] extra, spec 14 T09) ships no py.typed
# marker. ``types-openpyxl`` exists but lags the runtime; mirror the docker /
# pgvector / jose / e2b approach rather than chase a partial stub.
[[tool.mypy.overrides]]
module = ["openpyxl.*"]
ignore_missing_imports = true

# docker SDK (persona-core [sandbox] extra, spec 12 LocalDockerSandbox) ships
# no py.typed marker; ``types-docker`` lags the runtime and is partial. The
# LocalDockerSandbox lazy-imports docker at construction so the module stays
# importable without the SDK installed; TYPE_CHECKING narrowing pulls the
# container/client types for the substrate-class boundary.
[[tool.mypy.overrides]]
module = ["docker", "docker.*"]
ignore_missing_imports = true

# pypdfium2 (persona-core [documents] extra, spec 14 T21 rasterisation for the
# scanned-PDF → vision handoff) ships an embedded PDFium binding without a
# py.typed marker; surface is small (PdfDocument, render_to_pil) and stable.
[[tool.mypy.overrides]]
module = ["pypdfium2", "pypdfium2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["packages/core/tests", "packages/runtime/tests", "packages/api/tests"]
markers = [
    "integration: marks tests that require external services (Docker, real DB)",
    "external: marks tests that call real external APIs (Anthropic, OpenAI)",
    "contract: marks protocol contract compliance tests",
]
addopts = "-v --tb=short -m 'not integration and not external'"
