[project]
name = "persona-workspace"
version = "1.0.0"
description = "Open Persona — a four-layer platform for building and running AI personas with typed memory and tier-routed model selection."
requires-python = ">=3.11"
# Root depends on every workspace member so a plain `uv sync` installs the
# whole monorepo into one virtualenv. Without this, members' deps only land
# when `uv sync --all-packages` is run — easy to forget, blocks mypy/pytest.
dependencies = [
    "persona-core[postgres]",
    "persona-runtime",
    "persona-api",
    "persona-voice",
]

[tool.uv.workspace]
members = ["packages/core", "packages/runtime", "packages/api", "packages/voice"]

[tool.uv.sources]
persona-core = { workspace = true }
persona-runtime = { workspace = true }
persona-api = { workspace = true }
persona-voice = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<7",
    "pre-commit>=3.7,<5",
    "types-PyYAML>=6,<7",
    # Spec 14 parser libraries — needed for Phase 5 test runs even though
    # D-14-X-documents-extra is "deferred v0.2" (the lazy-import +
    # MissingDependencyError discipline is the structural defence at the
    # import-graph level; these are direct test-environment deps so
    # pytest can exercise the actual parsers, not just simulated-missing
    # paths).
    "pypdf>=6.0,<7",
    "pypdfium2>=5.0,<6",
    "python-docx>=1.1,<2",
    "openpyxl>=3.1,<4",
    # Spec 16 T11-T14 — host-side parsers for the §3.7 inspection asserts.
    # python-pptx mirrors the sandbox image manifest pin so the test side and
    # the in-sandbox library are version-aligned; never imported by
    # persona-core / persona-runtime code paths inside the sandbox.
    "python-pptx>=1.0,<2",
    # Spec 12 LocalDockerSandbox — docker SDK in dev so unit tests can mock
    # against the SDK types (LogConfig, Ulimit, container shapes) without
    # requiring users to install the `[sandbox]` extra explicitly. The
    # `[sandbox]` extra remains the production install path; this dev pin
    # mirrors it so CI's `uv sync` covers both `pytest` and `pytest -m
    # integration` paths (integration tests still skip on no-docker-daemon).
    "docker>=7,<8",
    # Spec 12 HostedSandbox — e2b-code-interpreter is in the [hosted] extra
    # (persona-api). Same dev-mirror pattern as docker above: tests
    # `patch.object(...)` against the SDK shape (T12 fix tests, hosted
    # serializer tests). Without the SDK in dev, the unit-test import path
    # fails on a clean clone even though the module's lazy-import discipline
    # at the use-site is correct.
    "e2b-code-interpreter>=1.0,<2",
    # Spec 33 (D-33-X-import-linter) — enforce the open-core license boundary:
    # the MIT engine packages must never import the PolyForm-NC app packages.
    "import-linter>=2.0,<3",
    # Per-test timeout backstop so a stuck/racing test fails fast instead of
    # hanging a serial run (see [tool.pytest.ini_options] addopts --timeout).
    "pytest-timeout>=2.3,<3",
]

# Spec 33 (D-33-X-import-linter): the MIT engine (persona-core / persona-runtime
# / persona-voice) must not import the source-available PolyForm-NC app
# (persona-api) — otherwise the permissive code would be encumbered. Direction is
# already clean (R-33-3); this contract is the regression guard. Run via
# `uv run lint-imports`. (persona-web is TypeScript — not in the Python graph.)
[tool.importlinter]
root_packages = ["persona", "persona_runtime", "persona_voice", "persona_api"]

[[tool.importlinter.contracts]]
name = "MIT engine must not import the PolyForm-NC app"
type = "forbidden"
source_modules = ["persona", "persona_runtime", "persona_voice"]
forbidden_modules = ["persona_api"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "COM", "C4", "PT", "RET", "SIM", "TCH", "ARG", "PTH", "ERA"]
ignore = ["COM812"]

[tool.ruff.lint.per-file-ignores]
# FastAPI (persona-api, spec 08): `Depends()`/`Query()` in argument defaults is
# the framework idiom (B008); and FastAPI resolves dependency/route signatures
# via get_type_hints at runtime, so names used in those annotations must be real
# runtime imports — the type-checking rules' "move into TYPE_CHECKING" would
# break dependency resolution (the request param gets mis-read as a query param).
"packages/api/**" = ["B008", "TC001", "TC002", "TC003"]
# persona-voice (spec V1 T04) — same FastAPI signature-resolution rules:
# `Request` and `Callable`/`Awaitable` must be RUNTIME imports because
# FastAPI resolves dependency signatures via get_type_hints at startup.
# `Depends(...)` in argument defaults is the framework idiom (B008).
"packages/voice/**" = ["B008", "TC001", "TC002", "TC003"]
# persona-voice integration tests (spec V1 T08/T11/T12) — pytest fixtures are
# injected as test arguments for their side-effects (skip-on-unreachable for
# LiveKit Server + Postgres; auto-cleanup tenant_pair); ruff's ARG001 would
# require either `_` prefix renaming (loses pytest fixture discoverability)
# or `@pytest.mark.usefixtures` (doesn't apply when the test consumes the
# fixture's return value). The ARG001 is intentional, not a leftover.
"packages/voice/tests/integration/**" = ["B008", "TC001", "TC002", "TC003", "ARG001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
# Workspace siblings (persona-core, persona-runtime, persona-api) are uv-editable
# installs; mypy needs the src paths explicitly to resolve `persona.*`,
# `persona_runtime.*`, and `persona_api.*` imports across workspace boundaries.
# Setting this here means every `uv run mypy <pkg>` invocation picks it up
# without per-call MYPYPATH gymnastics (closes LF-12-3).
mypy_path = "packages/core/src:packages/runtime/src:packages/api/src:packages/voice/src"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# pgvector ships no py.typed marker / stubs (spec 07 [postgres] extra). Ignore
# its missing imports rather than vendoring stubs for a third-party lib.
[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true

# turbovec (Spec K0 optional [turbovec] extra) is a Rust/PyO3 lib with no py.typed
# marker. Ignore missing imports rather than vendoring stubs for an optional dep.
[[tool.mypy.overrides]]
module = ["turbovec", "turbovec.*"]
ignore_missing_imports = true

# python-jose (persona-api, spec 08 auth) ships no stubs. Ignore missing imports
# rather than depend on the partial third-party types-python-jose stubs.
[[tool.mypy.overrides]]
module = ["jose.*"]
ignore_missing_imports = true

# e2b-code-interpreter SDK (persona-api, spec 12 T08 hosted substrate per
# D-12-12) ships no py.typed marker. The hosted backend lazy-imports the SDK at
# the call site to keep the module importable without the SDK installed
# (graceful SandboxUnavailableError vs. ImportError at module load); the
# TYPE_CHECKING import pulls the ``Sandbox`` symbol for type-narrowing only.
[[tool.mypy.overrides]]
module = ["e2b_code_interpreter.*", "e2b", "e2b.*"]
ignore_missing_imports = true

# openpyxl (persona-core [documents] extra, spec 14 T09) ships no py.typed
# marker. ``types-openpyxl`` exists but lags the runtime; mirror the docker /
# pgvector / jose / e2b approach rather than chase a partial stub.
[[tool.mypy.overrides]]
module = ["openpyxl.*"]
ignore_missing_imports = true

# docker SDK (persona-core [sandbox] extra, spec 12 LocalDockerSandbox) ships
# no py.typed marker; ``types-docker`` lags the runtime and is partial. The
# LocalDockerSandbox lazy-imports docker at construction so the module stays
# importable without the SDK installed; TYPE_CHECKING narrowing pulls the
# container/client types for the substrate-class boundary.
[[tool.mypy.overrides]]
module = ["docker", "docker.*"]
ignore_missing_imports = true

# pypdfium2 (persona-core [documents] extra, spec 14 T21 rasterisation for the
# scanned-PDF → vision handoff) ships an embedded PDFium binding without a
# py.typed marker; surface is small (PdfDocument, render_to_pil) and stable.
[[tool.mypy.overrides]]
module = ["pypdfium2", "pypdfium2.*"]
ignore_missing_imports = true

# regex (persona-core, spec 15 T09 categorical hard-line filter) ships no
# py.typed marker; the ``types-regex`` stubs lag the runtime and the API
# surface we touch (``compile``, ``Pattern[str]``, ``sub``, ``split``) is
# stable + small. Mirror the docker/pgvector/jose/e2b/openpyxl/pypdfium2
# discipline rather than depend on partial third-party stubs.
[[tool.mypy.overrides]]
module = ["regex", "regex.*"]
ignore_missing_imports = true

# google-re2 (persona-core, spec 26 T03 regex_match) imports as ``re2``; it is a
# C++ extension (pybind11) shipping no py.typed marker. ReDoS-immune linear-time
# matching is the reason it's used (model-supplied patterns are untrusted); the
# API surface we touch (``compile``, ``Pattern.search/findall``, ``error``) is
# small + stable. Mirror the regex/docker/pgvector discipline.
[[tool.mypy.overrides]]
module = ["re2", "re2.*"]
ignore_missing_imports = true

# jmespath (persona-core, spec 26 T05 json_query) ships no py.typed marker and
# the ``types-jmespath`` stubs are partial; the surface we touch (``search`` +
# ``exceptions.JMESPathError``) is tiny + stable. Mirror the re2/regex discipline.
[[tool.mypy.overrides]]
module = ["jmespath", "jmespath.*"]
ignore_missing_imports = true

# livekit (persona-voice [packages/voice], spec V1 T02) — D-V1-1 branch (A)
# LiveKit OSS substrate. The PyPI `livekit` package (Room/Participant/Track SDK)
# and `livekit-api` package (AccessToken issuance, import path `livekit.api`)
# are both Apache-2.0 per D-V1-X-livekit-sdk-license-stack. py.typed status is
# inconsistent across LiveKit SDK versions; mirror the docker/pgvector/jose/
# e2b/openpyxl/pypdfium2/regex discipline rather than depend on partial third-
# party stubs.
[[tool.mypy.overrides]]
module = ["livekit", "livekit.*"]
ignore_missing_imports = true

# deepgram-sdk (persona-voice [packages/voice], spec V2 T04) — D-V2-1 LOCK
# launch streaming-STT provider. The PyPI `deepgram-sdk` package is MIT-licensed
# and ships a py.typed marker per R-V2-1 audit; however the dataclass / runtime-
# typed surface around `client.listen.asyncwebsocket.v('1').on(event, handler)`
# uses untyped event-bus callbacks (Callable without parameter types) that
# strict mypy cannot resolve cleanly across the handler boundary. Mirror the
# livekit / docker / pgvector / jose / e2b / openpyxl / pypdfium2 / regex
# discipline — ignore missing imports at the boundary so the V2 backend
# implementation stays untouched by partial third-party stubs.
[[tool.mypy.overrides]]
module = ["deepgram", "deepgram.*"]
ignore_missing_imports = true

# silero-vad-lite (persona-voice [packages/voice], spec V2 T05) — D-V2-X-silero-
# implementation-shape LOCK primary path. The PyPI `silero-vad-lite` package is
# MIT-licensed and bundles the v5 ONNX weights + a C++ ONNX runtime wrapper as
# a `ctypes` shim — no py.typed marker, no inline type hints on the
# `SileroVAD(sample_rate)` / `.process(data) -> float` surface. Mirror the
# livekit / deepgram / docker / pgvector / jose / e2b / openpyxl / pypdfium2 /
# regex discipline — ignore missing imports at the boundary so the VAD adapter
# implementation stays untouched by partial third-party stubs.
[[tool.mypy.overrides]]
module = ["silero_vad_lite", "silero_vad_lite.*"]
ignore_missing_imports = true

# onnxruntime fallback path (persona-voice [packages/voice], spec V2 T05). The
# PyPI `onnxruntime` package is MIT-licensed and ships a partial py.typed marker
# but the `InferenceSession` constructor + run() surface is dynamically typed
# at the boundary mypy sees. Documented even though the T05 implementation
# defaults to silero-vad-lite — the override covers the v0.2 fallback path
# where an operator bundles the ONNX file directly.
[[tool.mypy.overrides]]
module = ["onnxruntime", "onnxruntime.*"]
ignore_missing_imports = true

# cartesia (persona-voice [packages/voice], spec V3 T04) — D-V3-1 LOCK launch
# streaming-TTS provider (Sonic 3.5). NO mypy override needed:
# D-V3-X-mypy-tts-sdk-override verified at T04 install that the PyPI `cartesia`
# package (Apache-2.0, v3.2.0; Stainless-generated) ships a py.typed marker and
# fully-typed request/response models, so `mypy --strict` type-checks the
# Cartesia backend against the real SDK types with no friction — the defensive
# `ignore_missing_imports` block placed at T03 was dropped here. Transitive
# surface (anyio MIT / distro Apache-2.0 / httpx BSD-3 / pydantic MIT / sniffio
# MIT / typing-extensions PSF; websockets BSD-3 extra) all permissive, mostly
# already in the workspace via deepgram/livekit.

[tool.pytest.ini_options]
testpaths = ["packages/core/tests", "packages/runtime/tests", "packages/api/tests", "packages/voice/tests"]
markers = [
    "integration: marks tests that require external services (Docker, real DB)",
    "external: marks tests that call real external APIs (Anthropic, OpenAI)",
    "contract: marks protocol contract compliance tests",
    "docker: marks tests that require a running Docker daemon (Spec 16 T09 etc.)",
    "soak: marks long-running sustained-load tests (Spec A0 T10; opt-in via -m soak)",
]
# --timeout backstop (pytest-timeout): a stuck/racing test fails fast instead of
# hanging the serial run. The soak suite stays excluded by default (-m below);
# its sustained-load tests legitimately run longer and opt in via `-m soak`.
addopts = "-v --tb=short --timeout=120 -m 'not integration and not external and not soak'"
